@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: s_user.c,v 1.218 2000/05/26 03:57:39 lusky Exp $
+ *  $Id: s_user.c,v 1.219 2000/06/07 03:23:14 lusky Exp $
  */
 #include "s_user.h"
 #include "channel.h"
@@ -1337,12 +1337,12 @@ int m_nick(aClient *cptr, aClient *sptr, int parc, char *parv[])
        * then its worth, just note the problem, and continue
        * -Dianora
        */
-      sendto_realops("BAD NICK: %s[%s@%s] on %s (from %s)", parv[1],
+      ts_warn("BAD NICK: %s[%s@%s] on %s (from %s)", parv[1],
                      (parc >= 6) ? parv[5] : "-",
                      (parc >= 7) ? parv[6] : "-",
                      (parc >= 8) ? parv[7] : "-", parv[0]);
-      
-     }
+      return 0;
+    }
 
   if ((parc >= 7) && (!strchr(parv[6], '.')))
     {
@@ -1351,8 +1351,9 @@ int m_nick(aClient *cptr, aClient *sptr, int parc, char *parv[])
        * isn't a single dot in the hostname, which is suspicious.
        * Don't fret about it just kill it. - ThemBones
        */
-      sendto_realops("BAD HOSTNAME: %s[%s@%s] on %s (from %s)",
+      ts_warn("BAD HOSTNAME: %s[%s@%s] on %s (from %s)",
                      parv[0], parv[5], parv[6], parv[7], parv[0]);
+      return 0;
     }
 
   fromTS = (parc > 6);
