@@ -1,3 +1,7 @@
+*** 20000606_3 by lusky
+fix logging of bad NICKs from servers
+
+
 *** 20000606_2 by lusky
 check for bogus NICK from peer server in m_nick
 minor fix for some notices in m_stats and m_oper (mh)
